# etc

work/bk/: CMakeLists.txt
work/bk/conf/: test.ini
work/bk/inc/: client.hpp  global.hpp  packetManager.hpp  packet_type.hpp  server.hpp  session.hpp
work/bk/src/: cliMain.cpp  client.cpp  crcChecker.cpp  packetManager.cpp  server.cpp  session.cpp  svrMain.cpp
work/fileDiff/: fileDiff.cpp  fileDiff.sln  fileDiff.vcxproj  fileDiff.vcxproj.filters
work/linux_part1/: CMakeLists.txt
work/linux_part1/inc/: client.hpp  crcChecker.hpp  packetManager.hpp  server.hpp  session.hpp
work/linux_part1/src/: svrMain.cpp
work/mp4Parser/: BinaryStream.cpp  BinaryStream.h  boxParser.cpp  boxParser.h  log.cpp  log.h  mkvParser.h  mkvPaser.cpp  mp4Parser.cpp  mp4Parser.sln  mp4Parser.vcxproj  mp4Parser.vcxproj.filters  trak.hpp
work/testClient/: CMakeLists.txt  testClient.cpp  testClient.sln  testClient.vcxproj  testClient.vcxproj.filters
work/testClient/conf/: test.ini
work/testClient/inc/: client.hpp  global.hpp  packet_type.hpp  session.hpp
work/testClient/src/: cliMain.cpp  svrMain.cpp
work/testCurl/: httpClient.cpp  httpClient.h  testCurl.cpp  testCurl.sln  testCurl.vcxproj  testCurl.vcxproj.filters
work/testPCAP/: netCap.cpp  netCap.h  testPCAP.cpp  testPCAP.sln  testPCAP.vcxproj  testPCAP.vcxproj.filters
work/testPlayer/testPlayer/: mp4_manager.cpp  mp4_manager.h  muxer.cpp  muxer.h  muxing.hpp  testPlayer.cpp  testPlayer.sln  testPlayer.vcxproj  testPlayer.vcxproj.filters
work/testPlayer/testPlayer/x64/Debug/: testPlayer.exe.recipe  testPlayer.ilk  testPlayer.vcxproj.FileListAbsolute.txt  vc142.idb
work/testPlayer/testPlayer/x64/Debug/testPlayer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testPlayer.lastbuildstate
